--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.10.2",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.4",
     "@types/node-sass": "^4.11.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
