--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-intersection-observer": "^9.10.2",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
